--- a/CVgrid.css
+++ b/CVgrid.css
@@ -41,6 +41,9 @@ body{
     width: 200px;
     height: 150px;
     text-align: center;
+    animation-name: blink;
+    animation-duration: 1s;
+    animation-iteration-count: 10;
     
 }
 #item4 {
@@ -78,3 +81,7 @@ body{
         text-align: center
     }
 }
+@keyframes blink {
+    from {background-color: rgb(250, 175, 175);}
+    to {background-color: white;}
+    }
